# llm-academy

./: .gitignore  LLM Academy - Gamified (standalone).html  PLAN.md  README.md  pyproject.toml
llm_academy/: __init__.py  db.py  main.py
llm_academy/api/: content.py  flashcards.py  gamification.py  profile.py  progress.py  quiz.py  run_example.py
llm_academy/content/: levels.json  topic_01.json  topic_02.json  topic_03.json  topic_04.json  topic_05.json  topic_06.json  topic_07.json  topic_08.json  topic_09.json  topic_10.json  topic_11.json  topic_12.json  topic_13.json  topic_14.json  topic_15.json  topic_16.json  topic_17.json  topic_18.json  topic_19.json  topic_20.json  topic_21.json  topic_22.json  topic_23.json  topic_24.json  topic_25.json  topic_26.json  topic_27.json  topic_28.json  topic_29.json  topic_30.json  topic_31.json  topic_32.json  topic_33.json  topic_34.json  topic_35.json  topic_36.json  topic_37.json  topic_38.json  topic_39.json  (+25 more)
llm_academy/examples/: runner.py  topic_01.py  topic_02.py  topic_03.py  topic_06.py  topic_07.py  topic_12.py  topic_14.py  topic_15.py  topic_16.py  topic_18.py  topic_20.py  topic_21.py  topic_22.py  topic_26.py  topic_27.py  topic_28.py  topic_29.py  topic_34.py  topic_42.py  topic_44.py  topic_46.py  topic_47.py  topic_48.py  topic_53.py  topic_55.py  topic_61.py
llm_academy/static/: app.js  index.html  styles.css
tests/: test_api.py
